# ruka_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ruka/include/ruka/: ruka_hardware.hpp  ruka_sensor_hardware.hpp
install/ruka/share/ruka/: .setup_assistant  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh  ruka.xml
install/ruka/share/ruka/cmake/: ament_cmake_export_targets-extras.cmake  export_rukaExport-noconfig.cmake  export_rukaExport.cmake
install/ruka/share/ruka/config/: imu.ros2_control.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  params.yaml  ros2_controllers.yaml  ruka.ros2_control.xacro  ruka.srdf  ruka.urdf  ruka.urdf.xacro  ruka_gz.ros2_control.xacro  ruka_gz.urdf  ruka_gz.urdf.xacro
install/ruka/share/ruka/config/gz/: ruka_gz.ros2_control.xacro  ruka_gz.urdf.xacro
install/ruka/share/ruka/launch/: all.launch.py  gazebo.launch.py  with_cont.launch.py  without_cont.launch.py
install/ruka_gz/share/ruka_gz/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh  ruka_gz.xml
install/ruka_gz/share/ruka_gz/cmake/: ruka_gzConfig.cmake
install/ruka_gz/share/ruka_gz/config/: ros2_controllers.yaml  ruka_gz.ros2_control.xacro  ruka_gz.urdf  ruka_gz.urdf.xacro  shok_controllers.yaml
install/ruka_gz/share/ruka_gz/launch/: gazebo.launch.py  launch_sim.launch.py  rsp.launch.py
log/: latest_build
src/demo/: package.xml
src/demo/config/: mtc.rviz  ruka_config.yaml
src/demo/launch/: cartesian.launch.py  demo.launch.py  ik_clearance_cost.launch.py  pickplace.launch.py
src/demo/scripts/: alternatives.py  compute_ik.py  constrained.py  fallbacks.py  pickplace.py
src/demo/src/: alternative_path_costs.cpp  cartesian.cpp  fallbacks_move_to.cpp  pick_place_task.cpp
src/mtc_ruka/: CMakeLists.txt  package.xml
src/mtc_ruka/config/: mtc.rviz  ruka_config.yaml
src/mtc_ruka/launch/: alternative_path_costs.launch.py  cartesian.launch.py  demo.launch.py  fallbacks_move_to.launch.py  flag.launch.py  modular.launch.py  mtc.rviz  mtc_demo.launch.py  pick_place_demo.launch.py  pickplace.launch.py
src/mtc_ruka/scripts/: cartesian.py  generate_pose.py  merger.py
src/mtc_ruka/src/: cartesian.cpp  flag.cpp  ik_clearance_cost.cpp  modular.cpp  mtc_ruka.cpp  pick_place_demo.cpp  pick_place_task.cpp
src/planner_base/: CMakeLists.txt  package.xml
src/planner_base/include/planner_base/: regular_planner.hpp
src/planner_base/src/: planner_node.cpp
src/planner_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/planner_plugins/include/planner_plugins/: planner_plugins.hpp
src/planner_plugins/src/: planner_plugins.cpp
src/ruka_end_eff/: .setup_assistant  CMakeLists.txt  package.xml  ruka_end_eff.xml
src/ruka_end_eff/config/: gripper_moveit_controllers.yaml  imu.ros2_control.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ruka.ros2_control.xacro  ruka.srdf  ruka.urdf  ruka.urdf.xacro  ruka_hand.ros2_control.xacro
src/ruka_end_eff/hardware/: ruka_hardware.cpp  ruka_sensor_hardware.cpp
src/ruka_end_eff/hardware/include/: ruka_hardware.hpp  ruka_sensor_hardware.hpp
src/ruka_end_eff/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py  with_cont.launch.py  without_cont.launch.py
src/ruka_try/: .setup_assistant  CMakeLists.txt  package.xml
src/ruka_try/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ruka.ros2_control.xacro  ruka.srdf  ruka.urdf.xacro
src/ruka_try/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
